--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit==1.31.0
-pandas==2.1.4
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-gspread==6.0.0
+streamlit>=1.28.0
+pandas>=2.0.0
+google-auth>=2.23.0
+gspread>=5.12.0
